<resources>
	<!-- Menu -->
	<string name="appName">[TEST]전화</string>
	<string name="textCall">전화</string>
	<string name="textNumberPad">숫자패드</string>
	<string name="textContracts">연락처</string>
	<string name="textHistory">전화이력</string>
	<string name="textRank">랭킹</string>
	<string name="textSetting">설정</string>

	<!-- NumberPad -->
	<string name="textDelete">Del</string>
	<string name="textVoiceCall">음성</string>
	<string name="textFaceCall">화상</string>
	<string name="textNumeric1">1</string>
	<string name="textNumeric2">2</string>
	<string name="textNumeric3">3</string>
	<string name="textNumeric4">4</string>
	<string name="textNumeric5">5</string>
	<string name="textNumeric6">6</string>
	<string name="textNumeric7">7</string>
	<string name="textNumeric8">8</string>
	<string name="textNumeric9">9</string>
	<string name="textNumeric0">0</string>
	<string name="textSymbolStar">*</string>
	<string name="textSymbolSharp">#</string>
	<string name="textEmpty"> </string>

	<!-- History -->
	<string name="textPhoneCall">전화</string>
	<string name="textMessage">문자</string>

	<!-- Setting -->
	<string name="textThemeSettingTitle">테마설정</string>
	<string name="textThemeSettingDefault">시스템 기본값</string>
	<string name="textThemeSettingDay">밝은 테마</string>
	<string name="textThemeSettingNight">어두운 테마</string>
	<array name="arrayThemeSettingList">
		<item name="itemThemeSettingDefault">@string/textThemeSettingDefault</item>
		<item name="itemThemeSettingDay">@string/textThemeSettingDay</item>
		<item name="itemThemeSettingNight">@string/textThemeSettingNight</item>
	</array>

	<!-- Message -->
	<string name="textErrorIncorrectPhoneNumber">올바른 전화번호를 입력해주세요.</string>
	<string name="textErrorPermissionDeniedTitle">권한 요청</string>
	<string name="textErrorPermissionDeniedMessage">전화 권한이 필요합니다.\n설정화면에서 권한 허용을 해주세요.</string>

	<!-- Popup -->
	<string name="textPopupYes">네</string>
	<string name="textPopupNo">아니오</string>
	<string name="textPopupOk">확인</string>
	<string name="textPopupCancel">취소</string>
	<string name="textClose">닫기</string>

	<!-- Key -->
	<string name="keySettingThemeMode">THEME_MODE_STATE</string>

</resources>