<?xml version="1.0" encoding="utf-8"?>
<layout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools">
	<data>
		<variable
			name="viewModel"
			type="com.jaydenkim465.phonecallproject.viewmodel.NumberPadViewModel"/>
	</data>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/colorMainBackground"
		android:orientation="vertical"
		android:padding="15dp"
		android:weightSum="6"
		tools:context=".fragment.NumberPad">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:orientation="horizontal"
			android:weightSum="3"
			android:layout_weight="1">
			<!-- TODO: 추후 textwatcher 구현하여 Edittext로 변경 및 custom 하여 줄바꿈 및 글자크기 자동 구현 필요 -->
			<TextView
				android:id="@+id/NumberInputEditText"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:gravity="center"
				android:autoSizeTextType="uniform"
				android:text="@{viewModel.displayPhoneNumber}"
				tools:text="010-1234-5678"
				/>
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:orientation="horizontal"
			android:weightSum="3"
			android:layout_weight="1">

			<TextView
				android:id="@+id/Number1Button"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:gravity="center"
				android:layout_weight="1"
				android:text="@string/textNumeric1"
				android:autoSizeTextType="uniform"
				android:onClick="@{()->viewModel.append(@string/textNumeric1)}"
				tools:ignore="NestedWeights" />

			<TextView
				android:id="@+id/Number2Button"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:gravity="center"
				android:layout_weight="1"
				android:text="@string/textNumeric2"
				android:autoSizeTextType="uniform"
				android:onClick="@{()->viewModel.append(@string/textNumeric2)}"/>

			<TextView
				android:id="@+id/Number3Button"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:gravity="center"
				android:layout_weight="1"
				android:text="@string/textNumeric3"
				android:autoSizeTextType="uniform"
				android:onClick="@{()->viewModel.append(@string/textNumeric3)}"/>
		</LinearLayout>


		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:orientation="horizontal"
			android:weightSum="3"
			android:layout_weight="1">

			<TextView
				android:id="@+id/Number4Button"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:gravity="center"
				android:layout_weight="1"
				android:text="@string/textNumeric4"
				android:autoSizeTextType="uniform"
				android:onClick="@{()->viewModel.append(@string/textNumeric4)}"
				tools:ignore="NestedWeights"/>

			<TextView
				android:id="@+id/Number5Button"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:gravity="center"
				android:layout_weight="1"
				android:text="@string/textNumeric5"
				android:autoSizeTextType="uniform"
				android:onClick="@{()->viewModel.append(@string/textNumeric5)}"/>

			<TextView
				android:id="@+id/Number6Button"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:gravity="center"
				android:layout_weight="1"
				android:text="@string/textNumeric6"
				android:autoSizeTextType="uniform"
				android:onClick="@{()->viewModel.append(@string/textNumeric6)}"/>

		</LinearLayout>


		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:orientation="horizontal"
			android:weightSum="3"
			android:layout_weight="1">

			<TextView
				android:id="@+id/Number7Button"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:gravity="center"
				android:layout_weight="1"
				android:text="@string/textNumeric7"
				android:autoSizeTextType="uniform"
				android:onClick="@{()->viewModel.append(@string/textNumeric7)}"
				tools:ignore="NestedWeights"/>

			<TextView
				android:id="@+id/Number8Button"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:gravity="center"
				android:layout_weight="1"
				android:text="@string/textNumeric8"
				android:autoSizeTextType="uniform"
				android:onClick="@{()->viewModel.append(@string/textNumeric8)}"/>

			<TextView
				android:id="@+id/Number9Button"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:gravity="center"
				android:layout_weight="1"
				android:text="@string/textNumeric9"
				android:autoSizeTextType="uniform"
				android:onClick="@{()->viewModel.append(@string/textNumeric9)}"/>

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:orientation="horizontal"
			android:weightSum="3"
			android:layout_weight="1">

			<TextView
				android:id="@+id/StarButton"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:gravity="center"
				android:layout_weight="1"
				android:text="@string/textSymbolStar"
				android:autoSizeTextType="uniform"
				android:onClick="@{()->viewModel.append(@string/textSymbolStar)}"
				tools:ignore="NestedWeights"/>

			<TextView
				android:id="@+id/Number0Button"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:gravity="center"
				android:layout_weight="1"
				android:text="@string/textNumeric0"
				android:autoSizeTextType="uniform"
				android:onClick="@{()->viewModel.append(@string/textNumeric0)}"/>

			<TextView
				android:id="@+id/SharpButton"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:gravity="center"
				android:layout_weight="1"
				android:text="@string/textSymbolSharp"
				android:autoSizeTextType="uniform"
				android:onClick="@{()->viewModel.append(@string/textSymbolSharp)}"/>

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:orientation="horizontal"
			android:weightSum="3"
			android:layout_weight="1">

			<TextView
				android:id="@+id/FaceCallButton"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:gravity="center"
				android:layout_weight="1"
				android:text="@string/textFaceCall"
				android:autoSizeTextType="uniform"
				tools:ignore="NestedWeights"/>

			<TextView
				android:id="@+id/VoiceCallButton"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:gravity="center"
				android:layout_weight="1"
				android:text="@string/textVoiceCall"
				android:autoSizeTextType="uniform"/>

			<TextView
				android:id="@+id/DeleteButton"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:gravity="center"
				android:layout_weight="1"
				android:maxLines="1"
				android:text="@string/textDelete"
				android:autoSizeTextType="uniform"
				android:onClick="@{()->viewModel.backSpace()}"
				android:onLongClick="@{()->viewModel.clear()}"/>

		</LinearLayout>
	</LinearLayout>
</layout>