<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".activity.ActivityMain">

	<com.google.android.material.tabs.TabLayout
		android:id="@+id/mainTabLayout"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toStartOf="@id/textViewSetting">
		<com.google.android.material.tabs.TabItem
			android:id="@+id/tabItemNumberPad"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/textNumberPad"
			/>

		<com.google.android.material.tabs.TabItem
			android:id="@+id/tabItemHistory"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/textHistory"
			/>

		<com.google.android.material.tabs.TabItem
			android:id="@+id/tabItemContacts"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/textContracts"
			/>

		<com.google.android.material.tabs.TabItem
			android:id="@+id/tabItemRank"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/textRank"
			/>
	</com.google.android.material.tabs.TabLayout>

	<TextView
		android:id="@+id/textViewSetting"
		android:layout_width="wrap_content"
		android:layout_height="0dp"
		android:text="@string/textSetting"
		android:gravity="center"
		android:padding="10dp"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintBottom_toBottomOf="@id/mainTabLayout"
		/>

	<androidx.viewpager2.widget.ViewPager2
		android:id="@+id/mainViewPager2"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		app:layout_constraintTop_toBottomOf="@id/mainTabLayout"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>